Updated code to only send push to specified users